[gd_scene load_steps=14 format=3 uid="uid://yur1q0frhicc"]

[ext_resource type="Script" path="res://Scripts/UI/menu_gun.gd" id="1_cuv1f"]
[ext_resource type="AudioStream" uid="uid://dh10vb05ii3hs" path="res://Import/Audio/FX/temp/click.mp3" id="2_8g5mr"]
[ext_resource type="Resource" uid="uid://r1av60gljfj1" path="res://Resources/Player/Resource_menu_gun.tres" id="2_t3b58"]
[ext_resource type="PackedScene" uid="uid://counsjax6jdx4" path="res://Scenes/Particles/shotgun_smoke.tscn" id="3_d7vas"]
[ext_resource type="AudioStream" uid="uid://bxwl3lhyn86ie" path="res://Import/Audio/FX/Pistol/GunshotPistol_BW.56908.wav" id="3_w0aat"]
[ext_resource type="Texture2D" uid="uid://dhn4rk3vndth8" path="res://Import/Textures/Characters/Pistols/glock18-base.png" id="4_mssma"]
[ext_resource type="Texture2D" uid="uid://b8025fuyrfmib" path="res://Import/Textures/Characters/Pistols/glock18-greyscale.png" id="5_6w6dn"]
[ext_resource type="Texture2D" uid="uid://2qy753ggpfnh" path="res://Import/Textures/Lights/laserSight.png" id="6_qnq7b"]

[sub_resource type="Animation" id="Animation_tesyg"]
resource_name = "Aim_Generic"
length = 0.0333367
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gun/Color:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_lptx0"]
resource_name = "Idle"
length = 0.0333367
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gun/Color:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tppsa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gun/Color:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShotSmoke:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ne0a6"]
resource_name = "Shoot_Generic"
length = 0.0888911
step = 0.0222222
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gun:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0222222, 0.0444444, 0.0666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gun/Color:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0222222, 0.0444444, 0.0666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0222222),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawnCasing"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShotSmoke:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_77ow3"]
_data = {
"Aim_Generic": SubResource("Animation_tesyg"),
"Idle_Generic": SubResource("Animation_lptx0"),
"RESET": SubResource("Animation_tppsa"),
"Shoot_Generic": SubResource("Animation_ne0a6")
}

[node name="MenuGun" type="Node2D"]
process_mode = 1
script = ExtResource("1_cuv1f")
gun_resource = ExtResource("2_t3b58")

[node name="ShotSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_w0aat")
volume_db = 12.0
max_polyphony = 10

[node name="ClickSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-17.8, 9)
stream = ExtResource("2_8g5mr")
max_polyphony = 10

[node name="GunAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_77ow3")
}

[node name="ShotSmoke" parent="." instance=ExtResource("3_d7vas")]
self_modulate = Color(0.470076, 0.470076, 0.470076, 1)
position = Vector2(12.2, 1)
initial_velocity_min = 600.0
initial_velocity_max = 700.0

[node name="Gun" type="Sprite2D" parent="."]
position = Vector2(-17.8, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_mssma")
hframes = 3
vframes = 3

[node name="Color" type="Sprite2D" parent="Gun"]
modulate = Color(0.58, 0.39672, 0.1218, 1)
texture = ExtResource("5_6w6dn")
hframes = 3
vframes = 3

[node name="LaserSight" type="Sprite2D" parent="Gun"]
self_modulate = Color(1, 0, 0, 1)
position = Vector2(152, -11)
texture = ExtResource("6_qnq7b")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(0.199999, 0)

[node name="Chamber" type="Marker2D" parent="."]
position = Vector2(-17.8, 1)

[node name="Velocity" type="RayCast2D" parent="."]
position = Vector2(-17.8, 9)

[node name="Back" type="RayCast2D" parent="."]
position = Vector2(-17.8, 9)
target_position = Vector2(-100, 0)
collision_mask = 2
